🆕Full Localization & JDK 17 & JDA 5.0.0-alpha.22